packages/kotlin/ttrp-frontend/src/test/resources/resolution/negative/res-002-ambiguous.ttrp
// expect: TTRP-RES-002
import erp.*
container c target polars {
    s = load(sales_txn)
}
